[tool.poetry]
name = "gpt-scratch"
version = "0.1.0"
description = "yet another gpt from scratch"
authors = ["Salajan <dsalajan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
